novice/sql/setup: Remove misleading directory name
It doesn't match the rest of the document's examples.

--- a/novice/sql/00-setup.ipynb
+++ b/novice/sql/00-setup.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2f9342f7149e3d0db32ddfbf8d5eeaa1747817530517ec6bcf297cea6beb1899"
+  "signature": "sha256:73f5d69a8c0e8c367f841d35ef6f1fabcb70b06b26bb4f40c877b30f937bddc4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -46,7 +46,7 @@
      "source": [
       "In order to execute the following lessons interactively, please install SQLite as mentioned in the [setup instructions](http://software-carpentry.org/v5/setup.html).\n",
       "\n",
-      "Then, generate a directory \"software_carpentry_sql\" at your chosen location, e.g.:"
+      "Then, generate a directory at your chosen location, e.g.:"
      ]
     },
     {
