novice/sql/agg: person was already in the select list, quant is the new column

--- a/novice/sql/06-agg.ipynb
+++ b/novice/sql/06-agg.ipynb
@@ -615,7 +615,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Note that we have added `person` to the list of fields displayed,\n",
+      "Note that we have added `quant` to the list of fields displayed,\n",
       "since the results wouldn't make much sense otherwise.\n",
       "\n",
       "Let's go one step further and remove all the entries\n",
